fix improper release of locks in master/slave handleDuplicateDbName

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.15, 3.2.13, 3.4.3, 3.5.4
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v3.4, v3.2, v3.0
    • Storage 2017-02-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The Lock::TempRelease is not declared with a variable name, which causes the release to only be a momentary yield, not a yield for the duration of the scope as intended.

            Assignee:
            Geert Bosch
            Reporter:
            Geert Bosch
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: