SERVER-27936 Fix yielding in handleDuplicateDbName

(cherry picked from commit 20f72e3ccd72d57e7e4df2272d3ac7456cda0af5)